update file structure

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,5 @@
 // app global css in SCSS form
+@font-face {
+  font-family: "Teko", sans-serif;
+  src: url("assets/fonts/Teko-Medium.ttf") format("opentype");
+}
