--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,15 +14,14 @@
 
 // src/css/quasar.variables.sass
 
-$primary   : #13395c;
-$secondary : #5c9fd6;
-$accent    : #ff9d0a;
+$primary: #13395c;
+$secondary: #5c9fd6;
+$accent: #ef6c00;
 
-$dark      : #1d1d1d;
-$dark-page : #121212;
+$dark: #1d1d1d;
+$dark-page: #121212;
 
-$positive  : #c1e882;
-$negative  : #ed8585;
-$info      : #f5ec73;
-$warning   : #f7c68d;
-
+$positive: #c1e882;
+$negative: #ed8585;
+$info: #f5ec73;
+$warning: #f7c68d;
