--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,11 @@
 // app global css in SCSS form
-@font-face {
+.text-h2 {
   font-family: "Teko", sans-serif;
-  src: url("assets/fonts/Teko-Medium.ttf") format("opentype");
+  font-size: 40px;
+}
+
+.text-h3 {
+  font-family: "Teko", sans-serif;
+  font-size: 40px;
+  margin: 0;
 }
